--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,12 +22,14 @@
     <string-array name="nav_drawer_items">
         <item >Home</item>
         <item >API Call Test</item>
+        <item>Friends List</item>
     </string-array>
 
     <!-- Nav Drawer List Item Icons -->
     <!-- Keep them in order as the titles are in -->
     <array name="nav_drawer_icons">
         <item>@drawable/ic_home</item>
+        <item>@drawable/ic_pages</item>
         <item>@drawable/ic_people</item>
     </array>
 
